--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,13 +37,13 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
-        if: ${{ github.repository == 'alexseipopov/capybaras_auth_service' && github.ref == 'refs/heads/main' }}
+        if: ${{ github.repository == 'CapyDevelop/auth_service' && github.ref == 'refs/heads/main' }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-        if: ${{ github.repository == 'alexseipopov/capybaras_auth_service' && github.ref == 'refs/heads/main' }}
+        if: ${{ github.repository == 'CapyDevelop/auth_service' && github.ref == 'refs/heads/main' }}
       - name: Login to Docker
         uses: docker/login-action@v1
-        if: ${{ github.repository == 'alexseipopov/capybaras_auth_service' && github.ref == 'refs/heads/main' }}
+        if: ${{ github.repository == 'CapyDevelop/auth_service' && github.ref == 'refs/heads/main' }}
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
@@ -52,11 +52,11 @@ jobs:
             echo "${{ secrets.MY_ENV_VAR }}" > .env_docker
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
-        if: ${{ github.repository == 'alexseipopov/capybaras_auth_service' && github.ref == 'refs/heads/main' }}
+        if: ${{ github.repository == 'CapyDevelop/auth_service' && github.ref == 'refs/heads/main' }}
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/auth_service:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/auth_service:prod
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
@@ -70,5 +70,5 @@ jobs:
           key: ${{ secrets.PRIVATE_SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            docker pull alexseipopov/auth_service:latest
+            docker pull alexseipopov/auth_service:prod
             docker-compose -f ~/capybaras/docker-compose.yml up --no-deps --build -d auth_service
